# AIrux8_opti_logic_prod

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  ppo_train_router.py  pyproject.toml  reproduction.py  requirements.txt  run_optimization.py  train_aircontrol_ppo.py
analysis/: AC_setvalue_range_analysis.xlsx  AC_setvalue_range_analysis_Clea.xlsx  AC_setvalue_range_analysis_IsetanMitsukoshi.xlsx  AC_setvalue_range_analysis_backup.xlsx  AC_temp_range_analysis.ipynb  Ac_control_analysis.ipynb  MASTER_Clea.json  MASTER_Clea.xlsx  MASTER_Clea_integrated.xlsx  MASTER_Clea_updated.xlsx  MASTER_IsetanMitsukoshi.xlsx  dashboards.py  plot_optimize_results.py  reporting.py  ~$MASTER_Clea_integrated.xlsx
config/: __init__.py  category_mapping.json  config_gcp.py  config_paths.yml  utils.py
deep_reinforcement_learning/: README.md
jobs/job-clea-data-scraping/: Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
jobs/job-clea-data-scraping/config/: config_gcp.py
jobs/job-clea-data-scraping/service/: secretmanager.py
jobs/trass-data-loader/: Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
jobs/trass-data-loader/config/: config.py  config_gcp.py
models/: Area1__kwh.joblib  Area1__temp.joblib  Area2__kwh.joblib  Area2__temp.joblib  Area3__kwh.joblib  Area3__temp.joblib  Area4__kwh.joblib  Area4__temp.joblib  BreakRoom__kwh.joblib  BreakRoom__temp.joblib  MeetingRoom__kwh.joblib  MeetingRoom__temp.joblib
notebooks/: building_level_planner_東光作業_モデル改善.ipynb  visualize_optimized_results.ipynb
services/airux8-optimize/: .dockerignore  docker-compose.yaml  main.py  ppo_train_router.py  pyproject.toml
services/airux8-optimize/config/: config_paths.yml  config_train.py
services/airux8-optimize/deep_reinforcement_learning/const/: machine_info.py
services/airux8-optimize/deep_reinforcement_learning/environment/prediction/: model.py  visualization.py
services/airux8-optimize/deep_reinforcement_learning/utils/: load.py
services/airux8-optimize/input_info/: crea_building_information.py
services/airux8-optimize/notebooks/: building_level_planner.ipynb  building_level_planner_東光作業.ipynb  optimization_debug_validation.ipynb  test_agent.ipynb  visualize_features_processed.ipynb  エリアごとにXGB学習.ipynb  深層強化学習_下準備.ipynb  環境のテスト.ipynb
services/airux8-optimize/notebooks/深層強化学習/: test_agent.ipynb
services/airux8-optimize/optimization/: optimizer.py  optimizer_runner.py
services/airux8-optimize/processing/: aggregator.py  preprocessor.py
services/airux8-optimize/processing/utilities/: category_mapping_loader.py  helper_functions.py  master_data_loader.py  temp_range_export.py  view_data.py  weatherapi_client.py
services/airux8-optimize/service/: ppo_train.py  prediction.py
(+201 files in other folders)
