[project]
name = "trass-data-loader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "db-dtypes>=1.4.4",
    "menteru-tools",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pytz>=2025.2",
]

[tool.uv.sources]
menteru-tools = { git = "https://github.com/MENTERU/menteru_tools.git", rev = "v0.2.0" }
